--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <title>Static - YNAB. Personal Budgeting Software for Windows, Mac, iOS and Android</title>
 </head>
 <body>
@@ -12,24 +12,24 @@
         <div class="dark-blue">
             <nav id="upper-nav">
                 <ul>
-                    <li><a href="#">Explore The Apps</a></li>
-                    <li><a href="#">Learn To Budget</a></li>
-                    <li><a href="#">Be Inspired</a></li>
-                    <li><a href="#">Get Support</a></li>
-                    <li><a href="#">Log In</a></li>
-                    <li><a href="#" id="free-trial-link">Start Your Free Trial</a></li>
-                    <li><a href="#"><img src="./assets/search-icon.svg" alt="search"></a></li>
+                    <li><a href="https://www.youneedabudget.com/"><span id="explore">Explore The Apps</span></a></li>
+                    <li><a href="https://www.youneedabudget.com/the-four-rules/"><span>Learn To Budget</a></li>
+                    <li><a href="https://www.youneedabudget.com/blog/"><span>Be Inspired</span></a></li>
+                    <li><a href="https://www.youneedabudget.com/help-center/"><span>Get Support</span></a></li>
                 </ul>
+                <a href="https://app.youneedabudget.com/" class="login fixed-width"><span>Log In</span></a>
+                <a href="https://www.youneedabudget.com/pricing#signup" class="green fixed-width"><span id="free-trial-link">Start Your Free Trial</span></a>
+                <a href="https://www.youneedabudget.com/help-center" class="fixed-width"><img src="./assets/search-icon.svg" alt="search"></a>
             </nav>
         </div>
         <div>
             <nav id="lower-nav">
                 <a href="#"><img src="./assets/primary-logo.svg" alt="YNAB logo"></a>
                 <ul>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Our App Lineup</a></li>
-                    <li><a href="#">Why We're Different</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="https://www.youneedabudget.com/features/">Features</a></li>
+                    <li><a href="https://www.youneedabudget.com/our-app-lineup/">Our App Lineup</a></li>
+                    <li><a href="https://www.youneedabudget.com/why-were-different/">Why We're Different</a></li>
+                    <li><a href="https://www.youneedabudget.com/pricing/">Pricing</a></li>
                 </ul>
             </nav>
         </div>
