Links and fix nav bar

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
         <div class="dark-blue">
             <nav id="upper-nav">
                 <ul>
-                    <li><a href="https://www.youneedabudget.com/"><span id="explore">Explore The Apps</span></a></li>
-                    <li><a href="https://www.youneedabudget.com/the-four-rules/"><span>Learn To Budget</a></li>
-                    <li><a href="https://www.youneedabudget.com/blog/"><span>Be Inspired</span></a></li>
-                    <li><a href="https://www.youneedabudget.com/help-center/"><span>Get Support</span></a></li>
+                    <li><a href="https://www.youneedabudget.com/" target="blank"><span id="explore">Explore The Apps</span></a></li>
+                    <li><a href="https://www.youneedabudget.com/the-four-rules/" target="blank"><span>Learn To Budget</a></li>
+                    <li><a href="https://www.youneedabudget.com/blog/" target="blank"><span>Be Inspired</span></a></li>
+                    <li><a href="https://www.youneedabudget.com/help-center/" target="blank"><span>Get Support</span></a></li>
                 </ul>
-                <a href="https://app.youneedabudget.com/" class="login fixed-width"><span>Log In</span></a>
-                <a href="https://www.youneedabudget.com/pricing#signup" class="green fixed-width"><span id="free-trial-link">Start Your Free Trial</span></a>
-                <a href="https://www.youneedabudget.com/help-center" class="fixed-width"><img src="./assets/search-icon.svg" alt="search"></a>
+                <a href="https://app.youneedabudget.com/"  target="blank" class="login fixed-width"><span>Log In</span></a>
+                <a href="https://www.youneedabudget.com/pricing#signup"  target="blank" class="green fixed-width"><span id="free-trial-link">Start Your Free Trial</span></a>
+                <a href="https://www.youneedabudget.com/help-center"  target="blank" class="fixed-width"><img src="./assets/search-icon.svg" alt="search"></a>
             </nav>
         </div>
         <div>
             <nav id="lower-nav">
-                <a href="#"><img src="./assets/primary-logo.svg" alt="YNAB logo"></a>
+                <a href="https://www.youneedabudget.com/"  target="blank"><img src="./assets/primary-logo.svg" alt="YNAB logo"></a>
                 <ul>
-                    <li><a href="https://www.youneedabudget.com/features/">Features</a></li>
-                    <li><a href="https://www.youneedabudget.com/our-app-lineup/">Our App Lineup</a></li>
-                    <li><a href="https://www.youneedabudget.com/why-were-different/">Why We're Different</a></li>
-                    <li><a href="https://www.youneedabudget.com/pricing/">Pricing</a></li>
+                    <li><a href="https://www.youneedabudget.com/features/" target="blank">Features</a></li>
+                    <li><a href="https://www.youneedabudget.com/our-app-lineup/" target="blank">Our App Lineup</a></li>
+                    <li><a href="https://www.youneedabudget.com/why-were-different/" target="blank">Why We're Different</a></li>
+                    <li><a href="https://www.youneedabudget.com/pricing/" target="blank">Pricing</a></li>
                 </ul>
             </nav>
         </div>
@@ -61,7 +61,7 @@
         <div class="savings flex">
             <div class="saving-text text">
                 <h2>On average, new budgeters save $600 in their first two months and more than $6,000 their first year.</h2>
-                <a href="#" id="video-link">Watch this one-minute video about how it works</a>
+                <a href="https://www.youneedabudget.com/#"  target="blank" id="video-link">Watch this one-minute video about how it works</a>
             </div>
             <div class="media video-image">
                 <img src="./assets/video-cover.jpg" alt="">
