--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Gain Total Control of Your Money</h1>
             <p>Stop living paycheck-to-paycheck,<br>get out of debt, and save more money.</p>
             <div id="trial-button-container">
-                <a href="#" class="green" id="trial-button">Try YNAB Free For 34 Days</a>
+                <a href="https://www.youneedabudget.com/pricing#signup" class="green" id="trial-button">Try YNAB Free For 34 Days</a>
             </div>
         </div>
     </div>
