--- a/index.html
+++ b/index.html
@@ -1,46 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300&display=swap"
+        rel="stylesheet">
     <title>Static - YNAB. Personal Budgeting Software for Windows, Mac, iOS and Android</title>
 </head>
+
 <body>
     <div class="nav-bars">
         <div class="dark-blue">
             <nav id="upper-nav">
                 <ul>
-                    <li><a href="https://www.youneedabudget.com/" target="blank"><span id="explore">Explore The Apps</span></a></li>
-                    <li><a href="https://www.youneedabudget.com/the-four-rules/" target="blank"><span>Learn To Budget</a></li>
+                    <li><a href="https://www.youneedabudget.com/" target="blank"><span id="explore">Explore The
+                                Apps</span></a></li>
+                    <li><a href="https://www.youneedabudget.com/the-four-rules/" target="blank"><span>Learn To
+                                Budget</a></li>
                     <li><a href="https://www.youneedabudget.com/blog/" target="blank"><span>Be Inspired</span></a></li>
-                    <li><a href="https://www.youneedabudget.com/help-center/" target="blank"><span>Get Support</span></a></li>
+                    <li><a href="https://www.youneedabudget.com/help-center/" target="blank"><span>Get
+                                Support</span></a></li>
                 </ul>
-                <a href="https://app.youneedabudget.com/"  target="blank" class="login fixed-width"><span>Log In</span></a>
-                <a href="https://www.youneedabudget.com/pricing#signup"  target="blank" class="green fixed-width"><span id="free-trial-link">Start Your Free Trial</span></a>
-                <a href="https://www.youneedabudget.com/help-center"  target="blank" class="fixed-width"><img src="./assets/search-icon.svg" alt="search"></a>
+                <a href="https://app.youneedabudget.com/" target="blank" class="login fixed-width"><span>Log
+                        In</span></a>
+                <a href="https://www.youneedabudget.com/pricing#signup" target="blank" class="green fixed-width"><span
+                        id="free-trial-link">Start Your Free Trial</span></a>
+                <a href="https://www.youneedabudget.com/help-center" target="blank" class="fixed-width"><img
+                        src="./assets/search-icon.svg" alt="search"></a>
             </nav>
         </div>
         <div>
             <nav id="lower-nav">
-                <a href="https://www.youneedabudget.com/"  target="blank"><img src="./assets/primary-logo.svg" alt="YNAB logo"></a>
+                <a href="https://www.youneedabudget.com/" target="blank" id="logo"><img src="./assets/primary-logo.svg"
+                        alt="YNAB logo"></a>
                 <ul>
                     <li><a href="https://www.youneedabudget.com/features/" target="blank">Features</a></li>
                     <li><a href="https://www.youneedabudget.com/our-app-lineup/" target="blank">Our App Lineup</a></li>
-                    <li><a href="https://www.youneedabudget.com/why-were-different/" target="blank">Why We're Different</a></li>
+                    <li><a href="https://www.youneedabudget.com/why-were-different/" target="blank">Why We're
+                            Different</a></li>
                     <li><a href="https://www.youneedabudget.com/pricing/" target="blank">Pricing</a></li>
                 </ul>
             </nav>
         </div>
     </div>
-    
+
     <div class="wrapper light-blue">
         <div class="main-content">
             <h1>Gain Total Control of Your Money</h1>
             <p>Stop living paycheck-to-paycheck,<br>get out of debt, and save more money.</p>
             <div id="trial-button-container">
-                <a href="https://www.youneedabudget.com/pricing#signup" class="green" id="trial-button">Try YNAB Free For 34 Days</a>
+                <a href="https://www.youneedabudget.com/pricing#signup" class="green" id="trial-button">Try YNAB Free
+                    For 34 Days</a>
             </div>
         </div>
     </div>
@@ -52,7 +64,11 @@
 
             <div class="app-text text">
                 <h2>You Need A Budget is award-winning software and a proven method—that works.</h2>
-                <p>What really makes You Need A Budget different is that we can <em>teach you how to manage your money and get ahead—for good.</em> What if your bills rolled in and instead of piling up, you just paid them? No sweat. What if you didn’t even realize it was payday because you had money in the bank and weren’t desperate for that check to arrive? <strong>Forget everything you think you know about budgeting and prepare to experience total control.</strong></p>
+                <p>What really makes You Need A Budget different is that we can <em>teach you how to manage your money
+                        and get ahead—for good.</em> What if your bills rolled in and instead of piling up, you just
+                    paid them? No sweat. What if you didn’t even realize it was payday because you had money in the bank
+                    and weren’t desperate for that check to arrive? <strong>Forget everything you think you know about
+                        budgeting and prepare to experience total control.</strong></p>
             </div>
         </div>
     </div>
@@ -60,8 +76,10 @@
     <div class="wrapper green">
         <div class="savings flex">
             <div class="saving-text text">
-                <h2>On average, new budgeters save $600 in their first two months and more than $6,000 their first year.</h2>
-                <a href="https://www.youneedabudget.com/#"  target="blank" id="video-link">Watch this one-minute video about how it works</a>
+                <h2>On average, new budgeters save $600 in their first two months and more than $6,000 their first year.
+                </h2>
+                <a href="https://www.youneedabudget.com/#" target="blank" id="video-link">Watch this one-minute video
+                    about how it works</a>
             </div>
             <div class="media video-image">
                 <img src="./assets/video-cover.jpg" alt="">
@@ -70,4 +88,5 @@
 
     </div>
 </body>
+
 </html>
