add testimonials div

--- a/index.html
+++ b/index.html
@@ -85,7 +85,16 @@
                 <img src="./assets/video-cover.jpg" alt="">
             </div>
         </div>
+    </div>
 
+    <div class="wrapper center">
+        <h2>Changed Lives Speak for themselves.</h2>
+        <p>We’ve helped hundreds of thousands of people get out of debt and gain control of their money.</p>
+        <div class="flex testmonials">
+            <figure></figure>
+            <figure></figure>
+            <figure></figure>
+        </div>
     </div>
 </body>
 
